--- a/css/question-detail.css
+++ b/css/question-detail.css
@@ -512,7 +512,7 @@
 }
 .qna-list-item-footer-comments:after,
 .qna-list-item-footer-date:after {
-	content: "Â·";
+	content: "·";
 	margin: 0 4px
 }
 
@@ -886,7 +886,7 @@
 	}
 }
 .question-detail-footer-metadata>:after {
-	content: "Â·";
+	content: "·";
 	margin: 0 5px
 }
 @media (min-width: 1024px) {
