--- a/view/login/login.html
+++ b/view/login/login.html
@@ -112,7 +112,7 @@
 
 
         $.ajax({
-            url: "http://192.168.0.231:3000/login",
+            url: "http://localhost/login",
             type: "post",
             data: {
                 email: email,
